add new game list

--- a/index.html
+++ b/index.html
@@ -53,6 +53,14 @@
                             src="https://static-cdn.jtvnw.net/ttv-boxart/32399_IGDB-188x250.jpg">
                         </a>
                     </li>
+
+                    <li>
+                        <a target="_blank" 
+                        href="https://www.twitch.tv/directory/game/Call%20of%20Duty%3A%20Warzone">
+                            <img 
+                            src="https://static-cdn.jtvnw.net/ttv-boxart/512710-188x250.jpg">
+                        </a>
+                    </li>
                 </ul>
 
             </div>
